--- a/gb/20/12/12/n12615138.md
+++ b/gb/20/12/12/n12615138.md
@@ -1,27 +1,27 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/fipigv3526/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fipigv3526/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/fipigv3526/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/fipigv3526/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/fipigv3526/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/fipigv3526/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/fipigv3526/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/fipigv3526/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/fipigv3526/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/fipigv3526/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/fipigv3526/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/fipigv3526/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/fipigv3526/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/fipigv3526/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/fipigv3526/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/fipigv3526/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/fipigv3526/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/fipigv3526/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/fipigv3526/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/fipigv3526/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/fipigv3526/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/fipigv3526/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/fipigv3526/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/fipigv3526/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/eizauy3553/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/eizauy3553/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/eizauy3553/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/eizauy3553/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/eizauy3553/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>李正宽：美国社媒审查升级 危及世界民主自由</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2020/12/847ea0be9ab92b33615ced973225cb6b-600x400.png" />
 <h6>新泽西州妇女支持川普（New Jersey Women for Trump）的脸书群组在选举日前三天遭删除。该群组负责人称此事件骇人听闻。她认为这些社交媒体集团拥有太多太大的权力。(DENIS CHARLET/AFP via Getty Images)
 </h6>
 <hr>
-	<p>【大纪元2020年12月12日讯】2020年美国大选曲折离奇，大选日过后一个多月里，<ahref="https://github.com/fipigv3526/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>团队排山倒海的<ahref="https://github.com/fipigv3526/djy/blob/master/gb/tag/%E8%88%9E%E5%BC%8A.md#1">舞弊</a>证据接连被曝光，规模之空前令人震惊，这种精心策划的、系统性操弄大选实属<ahref="https://github.com/fipigv3526/djy/blob/master/gb/tag/%E6%94%BF%E5%8F%98.md#1">政变</a>，是在颠覆美国的宪政，也是在<ahref="https://github.com/fipigv3526/djy/blob/master/gb/tag/%E5%8F%9B%E5%9B%BD.md#1">叛国</a>。</p>
-<p>尽管大选<ahref="https://github.com/fipigv3526/djy/blob/master/gb/tag/%E8%88%9E%E5%BC%8A.md#1">舞弊</a>的人证、物证俱在，尽管将近90%的国会共和党议员不承认<ahref="https://github.com/fipigv3526/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>胜选，尽管数以十万计的民众接连举行“停止窃选”大游行，但是主流媒体对汹涌的民意故意视而不见，一边倒的为拜登的“当选”造势。</p>
-<p>而在这场<ahref="https://github.com/fipigv3526/djy/blob/master/gb/tag/%E5%8F%9B%E5%9B%BD.md#1">叛国</a><ahref="https://github.com/fipigv3526/djy/blob/master/gb/tag/%E6%94%BF%E5%8F%98.md#1">政变</a>中，大科技社交媒体公司的言论审查极力地推波助澜，直接危及到美国的言论自由以及世界的言论自由。</p>
-<h2>大选前“十月惊奇” 社媒的不公审查</h2>
+	<p>【大纪元2020年12月12日讯】2020年美国大选曲折离奇，大选日过后一个多月里，<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>团队排山倒海的舞弊证据接连被曝光，规模之空前令人震惊，这种精心策划的、系统性操弄大选实属<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%94%BF%E5%8F%98.md#1">政变</a>，是在颠覆美国的宪政，也是在叛国。</p>
+<p>尽管<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A7%E9%80%89%E8%88%9E%E5%BC%8A.md#1">大选舞弊</a>的人证、物证俱在，尽管将近90%的国会共和党议员不承认<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%8B%9C%E7%99%BB.md#1">拜登</a>胜选，尽管数以十万计的民众接连举行“停止窃选”大游行，但是主流媒体对汹涌的民意故意视而不见，一边倒地为拜登的“当选”造势。</p>
+<p>而在这场叛国<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E6%94%BF%E5%8F%98.md#1">政变</a>中，大科技社交媒体公司的言论审查极力地推波助澜，直接危及到美国的言论自由以及世界的民主自由。</p>
+<h2>大选前“十月惊奇” <ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A4%BE%E5%AA%92.md#1">社媒</a>的不公审查</h2>
 <p>在大选前的十月份，《纽约邮报》抛出了重磅炸弹，大篇幅曝光了拜登家族的腐败与卖国，以及亨特拜登性侵女童等丑闻。这样分量的“十月惊奇”可以很大程度上决定大范围选民的投票意向。</p>
-<p>然而脸书、推特等社交媒体却大搞言论审查，掩盖拜登的硬盘门丑闻，并对拜登和<ahref="https://github.com/fipigv3526/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>总统使用了双重标准，打压不利于拜登（及有利于川普总统）竞选的帖文、视频，甚至直接封号。</p>
-<p>比如，美国发行量最大的报纸之一《纽约邮报》因曝光拜登家族的丑闻，直接遭到了推特封号。相反，美国海关和边境保护局（CBP）代理局长马克?摩根因仅仅发文赞扬<ahref="https://github.com/fipigv3526/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>的边境墙政策有效果，被推特冠以“仇恨行为”而封号。</p>
-<p>在大选前几天，脸书上一个拥有近3万成员、名为《新泽西女性支持川普》（New Jersey Women for Trump）的群被脸书无缘无故给封了。该群组负责人称此事件骇人听闻，她认为这些社媒集团拥有太多太大的权力了！</p>
-<h2>掩盖拜登舞弊丑闻，社媒审查再升级</h2>
+<p>然而脸书、推特等社交媒体却大搞言论审查，掩盖拜登的硬盘门丑闻，并对拜登和<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>总统使用了双重标准，打压不利于拜登（及有利于川普总统）竞选的帖文、视频，甚至直接封号。</p>
+<p>比如，美国发行量最大的报纸之一《纽约邮报》因曝光拜登家族的丑闻，直接遭到了推特封号。相反，美国海关和边境保护局（CBP）代理局长马克?摩根因仅仅发文赞扬<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%B7%9D%E6%99%AE.md#1">川普</a>的边境墙政策有效果，被推特冠以“仇恨行为”而封号。</p>
+<p>在大选前几天，脸书上一个拥有近3万成员、名为《新泽西女性支持川普》（New Jersey Women for Trump）的群被脸书无缘无故给封了。该群组负责人称此事件骇人听闻，她认为这些<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E7%A4%BE%E5%AA%92.md#1">社媒</a>集团拥有太多太大的权力了！</p>
+<h2>掩盖拜登舞弊丑闻 社媒审查再升级</h2>
 <p>11月4日凌晨，在各州开票结果渐渐出炉、川普总统大幅领先时，川普在脸书、推特上先后发了两个帖子，其中一则写道：“今晚我将发表声明。大胜！”这条贴文被脸书标上了事实审核标签，点入以后竟是脸书自己的计票中心，其中川普获得的选举人票数，远低于大部分媒体推定的初步结果。</p>
 <p>川普在另一则贴文中说：“我们票数大幅领先，但他们却想盗窃选举成果。我们绝不会让他们得逞。投票所关闭后，投下的选票不能算数！”这一条贴文，被脸书和推特限制。</p>
 <p>在接下来的几个星期，拜登舞弊丑闻接连曝出时，川普总统的几乎所有帖子都被推特打上了特殊标签。更甚者，民众的帖子中只要提到拜登、川普、大选这样的字眼，就会被打上标签。</p>
 <p>脸书也是草木皆兵，一位脸书用户上传了一张小号（英文：Trumpet）的图片，只因为单词Trumpet中包含了川普总统的名字Trump，这个帖子也被贴上标签。</p>
 <p>12月6日，住在美国的知名作家郑义先生用Gmail给友人发信，结果无法发送出去，邮件被退回，更甚者，他的Gmail邮箱直接遭到封锁。郑义先生点开MailDeliverySub中的链接，找到“邮件遭到退回的原因：邮件含有可疑的文字或连接。”</p>
 <p>郑义先生恍然大悟，终于明白Gmail指的“可疑”文字是什么了，因为他在邮件中写道：“Fight for freedom ! Fight for US ! Fight for Trump! Fight for the great cause of Washington and Lincoln !”（为自由而战！为美国而战！为川普而战！为华盛顿和林肯的伟大事业而战！）事后，无论郑义先生如何操作，他的Gmail信箱还是被严密封锁，连空白信都发不出去。</p>
-<p>近日，谷歌旗下的YouTube更是赤膊上阵，在大选最终结果未定的情况下，擅自宣称“已经有足够多的州认证了他们的选举结果”，并开始屏蔽和删除大选舞弊指控的一切相关信息。</p>
+<p>近日，谷歌旗下的YouTube更是赤膊上阵，在大选最终结果未定的情况下，擅自宣称“已经有足够多的州认证了他们的选举结果”，并开始屏蔽和删除<ahref="https://github.com/eizauy3553/djy/blob/master/gb/tag/%E5%A4%A7%E9%80%89%E8%88%9E%E5%BC%8A.md#1">大选舞弊</a>指控的一切相关信息。</p>
 <h2>社媒网络专制的背后有黑手？</h2>
 <p>12月10日，美国媒体《国家脉动》（The National Pulse）独家报导了该媒体的调查结果，显示YouTube雇用多名曾为中共控制机构工作过的软件工程师。</p>
 <p>《国家脉动》发现，台锦江（Jinjiang Tai，音译）自2019年5月起在YouTube做软件工程师，而台锦江曾在代表中共军队以及公安部、国家保密局等情报机构领导的公司工作。 陈晓（Xiao Chen，音译）自2020年11月起在YouTube担任软件工程师。根据陈晓的领英介绍，他曾在中山大学做研究助理。而中山大学已在美国政府的实体清单内。杨帆（Fan Yang，音译）自2017年4月起在YouTube做软件工程师。杨帆曾在中国电信实习过，而中国电信被美国国防部认定为与中共军队合作超过20年，其背后最大操盘手正是“中国第一贪”江泽民长子江绵恒。</p>
@@ -38,40 +38,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/fipigv3526/djy/blob/master/gb/20/12/4/n12596714.md#1">周晓辉：对大选舞弊定性 川普为重磅行动铺垫</a></li>
-<li><a href="https://github.com/fipigv3526/djy/blob/master/gb/20/12/5/n12597752.md#1">【专访】美退役中将：大选舞弊是叛国罪</a></li>
-<li><a href="https://github.com/fipigv3526/djy/blob/master/gb/20/12/9/n12605329.md#1">《诸世纪》预言揭美国大选舞弊内幕和密谋者</a></li>
-<li><a href="https://github.com/fipigv3526/djy/blob/master/gb/20/12/9/n12607141.md#1">YouTube将删除大选舞弊指控内容 保守派谴责</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/4/n12596714.md#1">周晓辉：对大选舞弊定性 川普为重磅行动铺垫</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/9/n12605329.md#1">《诸世纪》预言揭美国大选舞弊内幕和密谋者</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/9/n12607141.md#1">YouTube将删除大选舞弊指控内容 保守派谴责</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/20/12/10/n12610916.md#1">美国会下周首次听证 审查大选舞弊</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/3/18/n11120824.md#1" target="_blank">共产暴政录：5.12汶川地震后 中共嫁祸法轮功</a></li><li><a href="https://github.com/fipigv3526/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank">证人描述活摘恐怖</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/16/10/23/n8423584.md#1" target="_blank">屡遭拘禁摧残16年 妇坚修法轮功神奇复原</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank">马克思的成魔之路</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/2/20/n10157890.md#1" target="_blank">沉静：切·格瓦拉——魔幻偶像（四）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/1/n10946163.md#1" target="_blank">新加坡法轮功学员修炼故事 真善忍改变人心</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/10/3/n12449841.md#1">《圣经》与《推背图》预言的应验与变换9</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/9/n12606110.md#1">前以色列高官：外星人与人类联系 川普知道</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/11/20/n12563507.md#1">【成吉思汗】花剌子模灭国 丘处机道破天机</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/9/n12605329.md#1">《诸世纪》预言揭美国大选舞弊内幕和密谋者</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/3/n12592668.md#1">老子慧光 《道德经》名句耐人玩味</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/11/n12611973.md#1">【远见快评】独一无二 德州诉讼三理由赢定了</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/11/n12613777.md#1">【直播】威斯康星州参众两院联合听证会</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/10/n12608508.md#1">密歇根州议员威胁证人 被众院委员会撤职</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/10/n12610955.md#1">【新闻大家谈】民主党3大鳄出事 18州挺德州诉讼</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/9/n12607515.md#1">中共列演员四宗罪 传刘亦菲带编剧开工犯忌</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/9/n12605082.md#1">郑爽批当今直播带货吃相难看 自曝是赵丽颖粉</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/10/n12610375.md#1">户田惠梨香与松坂桃李宣布结婚：会相互扶持</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/9/n12607106.md#1">准时到片场竟成优点 刘德华质疑演员标准下降</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/10/n12611385.md#1">抵台隔离第二周遇地震 杜汶泽一句话激励港人</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/2/n12590942.md#1">燕麦可以当减肥餐  一天该吃多少分量？</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/9/n12606110.md#1">前以色列高官：外星人与人类联系 川普知道</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/9/n12605528.md#1">什么？ 欧洲又有三国出现神秘金属柱子</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/11/n12612411.md#1">美国湖泊出现巨无霸金鱼 重达4公斤</a></li>
-<li><a href="https://github.com/dwmfik381/djy/blob/master/gb/20/12/9/n12608346.md#1">鸡汤怎么煮最滋补？3道鸡汤药膳 补肾去湿气</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/21/12/16/n13442125.md#1">【百年真相】云南省委书记案 138万人受牵连</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13632196.md#1">【百年真相】三件大坏事 江泽民最想让人遗忘</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13671140.md#1">【未解之谜】沙中庞贝 楼兰之谜</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/16/n13649079.md#1">【人生之钥】败家子卖田地卖金玉 结局出人意料</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/2/17/n13582749.md#1">【奇术】看风也能预知命运和兴衰成败</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676985.md#1">【未解之谜】高级生命控制星体和人类的对应？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/9/n13634492.md#1">【思想领袖】如何对抗大科企极权主义</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678895.md#1">【拍案惊奇】遇难者头七 东航空难变政治事件</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13675009.md#1">五大战区部署歼-20 中共空军意欲何为</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/24/n13669168.md#1">配F-35C等舰载机 美福特号航母已准备好战斗</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674635.md#1">六四领袖被刺杀 FBI盯上中共间谍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676833.md#1">47岁林志玲产后首晒照 获赞“最美妈咪”</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678198.md#1">威尔史密斯奥斯卡台上打人 摘影帝后致歉落泪</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13678918.md#1">大S具俊晔已在台湾完成登记 结婚纪念日选这天</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13675982.md#1">《柏捷顿家族：名门韵事》第二季影评：三角恋难题 仍可圆满解决</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676901.md#1">林心如晒自拍秀恩爱 霍建华私下小动作引围观</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/28/n13677065.md#1">新筛查方法可查出95%一期胰腺癌</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/25/n13673047.md#1">搭机4点让旅途更安全 资深空姐：选飞机很重要</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674013.md#1">吃奇异果不用削皮 连皮一起吃营养更加倍</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/27/n13676145.md#1">为什么新衣服在穿着之前要先洗涤？</a></li>
+<li><a href="https://github.com/eizauy3553/djy/blob/master/gb/22/3/26/n13674840.md#1">【美食天堂】鲜虾肠粉做法～完美比例配方！</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/fipigv3526/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/fipigv3526/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/12/n12615138.htm">李正宽：美国社媒审查升级 危及世界民主自由</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/eizauy3553/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/20/12/12/n12615138.htm">李正宽：美国社媒审查升级 危及世界民主自由</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/fipigv3526/djy/blob/master/gb/20/12/12/n12615138.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/fipigv3526/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/fipigv3526/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/fipigv3526/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/fipigv3526/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/fipigv3526/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/eizauy3553/djy/blob/master/gb/20/12/12/n12615138.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/eizauy3553/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/eizauy3553/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/eizauy3553/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
